{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 45,
  "lineage": "547f4c5e-51dc-adc5-d032-6ac263439136",
  "resources": [
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:514325312548:loadbalancer/app/lb/6d2f10f8575d0c72",
            "arn_suffix": "app/lb/6d2f10f8575d0c72",
            "dns_name": "lb-1327936669.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:514325312548:loadbalancer/app/lb/6d2f10f8575d0c72",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb",
            "security_groups": [
              "sg-0a10dec521c008381"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00943d6f77cb872d2"
              },
              {
                "subnet_id": "subnet-071d10616a28ef425"
              },
              {
                "subnet_id": "subnet-0f9b3486f2b05ee66"
              }
            ],
            "subnets": [
              "subnet-00943d6f77cb872d2",
              "subnet-071d10616a28ef425",
              "subnet-0f9b3486f2b05ee66"
            ],
            "vpc_id": "vpc-0fb607556601fc72a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listerner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:514325312548:listener/app/lb/6d2f10f8575d0c72/b400909c9fb845c4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:514325312548:targetgroup/lb-tg/6b1e691609df0cd5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:514325312548:listener/app/lb/6d2f10f8575d0c72/b400909c9fb845c4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:514325312548:loadbalancer/app/lb/6d2f10f8575d0c72",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancing.aws_lb.alb",
            "module.loadbalancing.aws_lb_target_group.tg",
            "module.sg.aws_security_group.alb",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:514325312548:targetgroup/lb-tg/6b1e691609df0cd5",
            "arn_suffix": "targetgroup/lb-tg/6b1e691609df0cd5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:514325312548:targetgroup/lb-tg/6b1e691609df0cd5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:security-group/sg-0a10dec521c008381",
            "description": "Allow all traffic on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a10dec521c008381",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "514325312548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "task-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "task-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:security-group/sg-09c2c4c153e36b4a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c2c4c153e36b4a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a4a40fd3b180b331"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20211102093223244100000004",
            "name_prefix": "terraform-",
            "owner_id": "514325312548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "task-db-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "task-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.vm",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:security-group/sg-0381e2e099cd1cfaa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0381e2e099cd1cfaa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a10dec521c008381"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20211102093213865900000003",
            "name_prefix": "terraform-",
            "owner_id": "514325312548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "task-service-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "task-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:security-group/sg-0a4a40fd3b180b331",
            "description": "Allow all traffic on port 80 from alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4a40fd3b180b331",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a10dec521c008381"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vm",
            "name_prefix": "",
            "owner_id": "514325312548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "task-vm-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "task-vm-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08cdece1705bc8fcc",
            "domain": "vpc",
            "id": "eipalloc-032c9138dc90dbe6b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e01602b3d5016b4b",
            "private_dns": "ip-10-0-0-38.ec2.internal",
            "private_ip": "10.0.0.38",
            "public_dns": "ec2-34-202-188-254.compute-1.amazonaws.com",
            "public_ip": "34.202.188.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:internet-gateway/igw-0fe34bc2642ab3bf2",
            "id": "igw-0fe34bc2642ab3bf2",
            "owner_id": "514325312548",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032c9138dc90dbe6b",
            "connectivity_type": "public",
            "id": "nat-0cb880c7ce5d5cf6e",
            "network_interface_id": "eni-0e01602b3d5016b4b",
            "private_ip": "10.0.0.38",
            "public_ip": "34.202.188.254",
            "subnet_id": "subnet-0f9b3486f2b05ee66",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fe34bc2642ab3bf2",
            "id": "r-rtb-0c5d927ad73bee13d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c5d927ad73bee13d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:route-table/rtb-02111a106fcdbb40e",
            "id": "rtb-02111a106fcdbb40e",
            "owner_id": "514325312548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cb880c7ce5d5cf6e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.random_shuffle.az_list",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:route-table/rtb-0c5d927ad73bee13d",
            "id": "rtb-0c5d927ad73bee13d",
            "owner_id": "514325312548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe34bc2642ab3bf2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eb121c63b39dce1",
            "route_table_id": "rtb-02111a106fcdbb40e",
            "subnet_id": "subnet-0aec1d1ec6cf2f592"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list",
            "module.vpc.aws_eip.eip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd61adccf14976f0",
            "route_table_id": "rtb-02111a106fcdbb40e",
            "subnet_id": "subnet-025081c6369b14b77"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0138b8b25b12f1466",
            "route_table_id": "rtb-02111a106fcdbb40e",
            "subnet_id": "subnet-099dfab70a16ba1fb"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025e03e3ec8a48274",
            "route_table_id": "rtb-0c5d927ad73bee13d",
            "subnet_id": "subnet-0f9b3486f2b05ee66"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec4ab04d22392553",
            "route_table_id": "rtb-0c5d927ad73bee13d",
            "subnet_id": "subnet-00943d6f77cb872d2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ac422008e415957",
            "route_table_id": "rtb-0c5d927ad73bee13d",
            "subnet_id": "subnet-071d10616a28ef425"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list",
            "module.vpc.aws_internet_gateway.gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:subnet/subnet-0aec1d1ec6cf2f592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.128/25",
            "id": "subnet-0aec1d1ec6cf2f592",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "514325312548",
            "tags": {
              "Name": "private_subnet-1"
            },
            "tags_all": {
              "Name": "private_subnet-1"
            },
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:subnet/subnet-025081c6369b14b77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.128/25",
            "id": "subnet-025081c6369b14b77",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "514325312548",
            "tags": {
              "Name": "private_subnet-2"
            },
            "tags_all": {
              "Name": "private_subnet-2"
            },
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:subnet/subnet-099dfab70a16ba1fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.128/25",
            "id": "subnet-099dfab70a16ba1fb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "514325312548",
            "tags": {
              "Name": "private_subnet-3"
            },
            "tags_all": {
              "Name": "private_subnet-3"
            },
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:subnet/subnet-0f9b3486f2b05ee66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/25",
            "id": "subnet-0f9b3486f2b05ee66",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "514325312548",
            "tags": {
              "Name": "public_subnet-1"
            },
            "tags_all": {
              "Name": "public_subnet-1"
            },
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:subnet/subnet-00943d6f77cb872d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/25",
            "id": "subnet-00943d6f77cb872d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "514325312548",
            "tags": {
              "Name": "public_subnet-2"
            },
            "tags_all": {
              "Name": "public_subnet-2"
            },
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:subnet/subnet-071d10616a28ef425",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/25",
            "id": "subnet-071d10616a28ef425",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "514325312548",
            "tags": {
              "Name": "public_subnet-3"
            },
            "tags_all": {
              "Name": "public_subnet-3"
            },
            "vpc_id": "vpc-0fb607556601fc72a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514325312548:vpc/vpc-0fb607556601fc72a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-0705738bc0adbb551",
            "default_route_table_id": "rtb-0fa252256d8d003cb",
            "default_security_group_id": "sg-009062f76681b7bc9",
            "dhcp_options_id": "dopt-0a03cb0332b2ed3bb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fb607556601fc72a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fa252256d8d003cb",
            "owner_id": "514325312548",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}